@@ -15,10 +15,12 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.IntStream;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyDouble;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
@@ -26,6 +28,10 @@ import static org.mockito.Mockito.when;
 
 /**
  * Unit tests for {@link DriveDurationService}.
+ *
+ * <p>The service only measures, so every test asserts what it RETURNS. Storing — and the guard
+ * that stores only while the home is still the one measured from — belongs to
+ * {@link UserDriveTimeWriter}, and is pinned in its own tests.
  */
 @ExtendWith(MockitoExtension.class)
 class DriveDurationServiceTest {
@@ -39,9 +45,6 @@ class DriveDurationServiceTest {
     @Mock
     private LocationRepository locationRepository;
 
-    @Mock
-    private UserDriveTimeWriter driveTimeWriter;
-
     private DriveDurationService service;
 
     private static final Long USER_ID = 42L;
@@ -50,141 +53,122 @@ class DriveDurationServiceTest {
 
     @BeforeEach
     void setUp() {
-        service = new DriveDurationService(orsClient, orsProperties,
-                locationRepository, driveTimeWriter);
+        service = new DriveDurationService(orsClient, orsProperties, locationRepository);
+    }
+
+    /** Configured ORS, the given roster, and ORS answering {@code durations} for exactly it. */
+    private void orsAnswers(List<LocationEntity> roster, List<Double> durations) {
+        when(orsProperties.isConfigured()).thenReturn(true);
+        when(locationRepository.findAll()).thenReturn(roster);
+        when(orsClient.fetchDurations(eq(SOURCE_LAT), eq(SOURCE_LON), destinationsOf(roster)))
+                .thenReturn(durations);
+    }
+
+    /**
+     * Matches the destination list built from {@code roster}, by content: {@code double[]} has
+     * identity equality, so {@code eq} could never match a list the service built itself.
+     */
+    private static List<double[]> destinationsOf(List<LocationEntity> roster) {
+        return argThat(actual -> actual != null
+                && actual.size() == roster.size()
+                && IntStream.range(0, roster.size()).allMatch(i ->
+                        actual.get(i)[0] == roster.get(i).getLat()
+                                && actual.get(i)[1] == roster.get(i).getLon()));
     }
 
     @Test
-    @DisplayName("returns 0 when ORS is not configured")
-    void refreshForUser_orsNotConfigured_returnsZero() {
+    @DisplayName("no answer when ORS is not configured — and ORS is not called")
+    void measureForUser_orsNotConfigured_noAnswer() {
         when(orsProperties.isConfigured()).thenReturn(false);
 
-        int result = service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
+        Optional<List<UserDriveTimeEntity>> result =
+                service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
 
-        assertThat(result).isZero();
-        verifyNoInteractions(orsClient);
+        assertThat(result).isEmpty();
+        verifyNoInteractions(orsClient, locationRepository);
     }
 
     @Test
-    @DisplayName("returns 0 when no locations exist")
-    void refreshForUser_noLocations_returnsZero() {
+    @DisplayName("no answer when no locations exist — and ORS is not called")
+    void measureForUser_noLocations_noAnswer() {
         when(orsProperties.isConfigured()).thenReturn(true);
         when(locationRepository.findAll()).thenReturn(List.of());
 
-        int result = service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
+        Optional<List<UserDriveTimeEntity>> result =
+                service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
 
-        assertThat(result).isZero();
+        assertThat(result).isEmpty();
         verifyNoInteractions(orsClient);
     }
 
     @Test
-    @DisplayName("converts ORS seconds to rounded seconds and persists UserDriveTimeEntity")
-    void refreshForUser_convertsAndPersists() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity durham = location(1L, "Durham UK", 54.78, -1.58);
-        when(locationRepository.findAll()).thenReturn(List.of(durham));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any())).thenReturn(List.of(2700.0));
+    @DisplayName("no answer when ORS returns an empty response — stored drive times should stay")
+    void measureForUser_emptyDurations_noAnswer() {
+        // Distinct from an answer with no valid duration (below): nothing was learned here, so a
+        // caller must not treat it as "no location is reachable" and clear what it has.
+        orsAnswers(List.of(location(1L, "Durham UK", 54.78, -1.58)), List.of());
 
-        int result = service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
-
-        assertThat(result).isEqualTo(1);
-        @SuppressWarnings("unchecked")
-        ArgumentCaptor<List<UserDriveTimeEntity>> captor = ArgumentCaptor.forClass(List.class);
-        verify(driveTimeWriter).replaceForUser(eq(USER_ID), captor.capture());
-        assertThat(captor.getValue()).hasSize(1);
-        assertThat(captor.getValue().get(0).getLocationId()).isEqualTo(1L);
-        assertThat(captor.getValue().get(0).getDriveDurationSeconds()).isEqualTo(2700);
+        assertThat(service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON)).isEmpty();
     }
 
     @Test
-    @DisplayName("returns 0 when ORS returns empty durations")
-    void refreshForUser_emptyDurations_returnsZero() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity durham = location(1L, "Durham UK", 54.78, -1.58);
-        when(locationRepository.findAll()).thenReturn(List.of(durham));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any())).thenReturn(List.of());
+    @DisplayName("converts an ORS duration into a row for that user and location")
+    void measureForUser_convertsDuration() {
+        orsAnswers(List.of(location(1L, "Durham UK", 54.78, -1.58)), List.of(2700.0));
 
-        int result = service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
+        List<UserDriveTimeEntity> rows =
+                service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON).orElseThrow();
 
-        assertThat(result).isZero();
+        assertThat(rows).hasSize(1);
+        assertThat(rows.get(0).getUserId()).isEqualTo(USER_ID);
+        assertThat(rows.get(0).getLocationId()).isEqualTo(1L);
+        assertThat(rows.get(0).getDriveDurationSeconds()).isEqualTo(2700);
     }
 
     @Test
-    @DisplayName("null ORS duration is skipped (not persisted) but old drive times are still cleared")
-    void refreshForUser_nullDuration_skipped() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity durham = location(1L, "Durham UK", 54.78, -1.58);
-        when(locationRepository.findAll()).thenReturn(List.of(durham));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any()))
-                .thenReturn(Arrays.asList((Double) null));
+    @DisplayName("an answer whose only duration is null is an answer with no rows, not no answer")
+    void measureForUser_nullDuration_answerWithNoRows() {
+        // Present-but-empty is what tells the manual refresh to clear: ORS answered, and nothing
+        // was reachable. Collapsing it into Optional.empty() would keep drive times ORS has just
+        // declined to confirm.
+        orsAnswers(List.of(location(1L, "Durham UK", 54.78, -1.58)), Arrays.asList((Double) null));
 
-        int result = service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
+        Optional<List<UserDriveTimeEntity>> result =
+                service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
 
-        assertThat(result).isZero();
-        @SuppressWarnings("unchecked")
-        ArgumentCaptor<List<UserDriveTimeEntity>> captor = ArgumentCaptor.forClass(List.class);
-        verify(driveTimeWriter).replaceForUser(eq(USER_ID), captor.capture());
-        assertThat(captor.getValue()).isEmpty();
+        assertThat(result).isPresent();
+        assertThat(result.get()).isEmpty();
     }
 
     @Test
-    @DisplayName("multiple locations are all persisted")
-    void refreshForUser_multipleLocations_allPersisted() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity durham = location(1L, "Durham UK", 54.78, -1.58);
-        LocationEntity whitley = location(2L, "Whitley Bay", 55.04, -1.44);
-        when(locationRepository.findAll()).thenReturn(List.of(durham, whitley));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any()))
-                .thenReturn(List.of(2700.0, 3600.0));
+    @DisplayName("a negative duration is skipped")
+    void measureForUser_negativeDuration_skipped() {
+        orsAnswers(List.of(location(1L, "Durham UK", 54.78, -1.58)), List.of(-1.0));
 
-        int result = service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
-
-        assertThat(result).isEqualTo(2);
-        @SuppressWarnings("unchecked")
-        ArgumentCaptor<List<UserDriveTimeEntity>> captor = ArgumentCaptor.forClass(List.class);
-        verify(driveTimeWriter).replaceForUser(eq(USER_ID), captor.capture());
-        assertThat(captor.getValue()).hasSize(2);
+        assertThat(service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON).orElseThrow()).isEmpty();
     }
 
     @Test
-    @DisplayName("replaces existing drive times via the transactional writer")
-    void refreshForUser_replacesExistingViaWriter() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity durham = location(1L, "Durham UK", 54.78, -1.58);
-        when(locationRepository.findAll()).thenReturn(List.of(durham));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any())).thenReturn(List.of(2700.0));
+    @DisplayName("every location with a duration gets a row, in roster order")
+    void measureForUser_multipleLocations_allMeasured() {
+        orsAnswers(List.of(location(1L, "Durham UK", 54.78, -1.58),
+                location(2L, "Whitley Bay", 55.04, -1.44)), List.of(2700.0, 3600.0));
 
-        service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
+        List<UserDriveTimeEntity> rows =
+                service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON).orElseThrow();
 
-        @SuppressWarnings("unchecked")
-        ArgumentCaptor<List<UserDriveTimeEntity>> captor = ArgumentCaptor.forClass(List.class);
-        verify(driveTimeWriter).replaceForUser(eq(USER_ID), captor.capture());
-        assertThat(captor.getValue()).hasSize(1);
+        assertThat(rows).extracting(UserDriveTimeEntity::getLocationId).containsExactly(1L, 2L);
+        assertThat(rows).extracting(UserDriveTimeEntity::getDriveDurationSeconds)
+                .containsExactly(2700, 3600);
     }
 
     @Test
-    @DisplayName("negative duration is skipped (not persisted)")
-    void refreshForUser_negativeDuration_skipped() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity durham = location(1L, "Durham UK", 54.78, -1.58);
-        when(locationRepository.findAll()).thenReturn(List.of(durham));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any())).thenReturn(List.of(-1.0));
+    @DisplayName("passes the origin and every destination, in order, to the ORS client")
+    void measureForUser_passesCorrectCoordinatesToOrs() {
+        orsAnswers(List.of(location(1L, "Durham", 54.78, -1.58),
+                location(2L, "Bamburgh", 55.61, -1.71)), List.of(2700.0, 5400.0));
 
-        int result = service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
-
-        assertThat(result).isZero();
-    }
-
-    @Test
-    @DisplayName("passes correct origin coordinates and destination list to ORS client")
-    void refreshForUser_passesCorrectCoordinatesToOrs() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity durham = location(1L, "Durham", 54.78, -1.58);
-        LocationEntity bamburgh = location(2L, "Bamburgh", 55.61, -1.71);
-        when(locationRepository.findAll()).thenReturn(List.of(durham, bamburgh));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any())).thenReturn(List.of(2700.0, 5400.0));
-
-        service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
+        service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
 
         @SuppressWarnings("unchecked")
         ArgumentCaptor<List<double[]>> destCaptor = ArgumentCaptor.forClass(List.class);
@@ -196,74 +180,42 @@ class DriveDurationServiceTest {
     }
 
     @Test
-    @DisplayName("mix of valid, null, and negative durations — only valid ones persisted")
-    void refreshForUser_mixedDurations_onlyValidPersisted() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity loc1 = location(1L, "Durham", 54.78, -1.58);
-        LocationEntity loc2 = location(2L, "Bamburgh", 55.61, -1.71);
-        LocationEntity loc3 = location(3L, "Kielder", 55.23, -2.58);
-        when(locationRepository.findAll()).thenReturn(List.of(loc1, loc2, loc3));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any()))
-                .thenReturn(Arrays.asList(2700.0, null, -5.0));
+    @DisplayName("mix of valid, null, and negative durations — only the valid one becomes a row")
+    void measureForUser_mixedDurations_onlyValidMeasured() {
+        orsAnswers(List.of(location(1L, "Durham", 54.78, -1.58),
+                location(2L, "Bamburgh", 55.61, -1.71),
+                location(3L, "Kielder", 55.23, -2.58)), Arrays.asList(2700.0, null, -5.0));
 
-        int result = service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
+        List<UserDriveTimeEntity> rows =
+                service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON).orElseThrow();
 
-        assertThat(result).isEqualTo(1);
-        @SuppressWarnings("unchecked")
-        ArgumentCaptor<List<UserDriveTimeEntity>> captor = ArgumentCaptor.forClass(List.class);
-        verify(driveTimeWriter).replaceForUser(eq(USER_ID), captor.capture());
-        List<UserDriveTimeEntity> saved = captor.getValue();
-        assertThat(saved).hasSize(1);
-        assertThat(saved.get(0).getLocationId()).isEqualTo(1L);
-        assertThat(saved.get(0).getUserId()).isEqualTo(USER_ID);
-        assertThat(saved.get(0).getDriveDurationSeconds()).isEqualTo(2700);
+        assertThat(rows).hasSize(1);
+        assertThat(rows.get(0).getLocationId()).isEqualTo(1L);
+        assertThat(rows.get(0).getUserId()).isEqualTo(USER_ID);
+        assertThat(rows.get(0).getDriveDurationSeconds()).isEqualTo(2700);
     }
 
     @Test
-    @DisplayName("persisted entities have correct userId for the requesting user")
-    void refreshForUser_entityHasCorrectUserId() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity loc = location(1L, "Durham", 54.78, -1.58);
-        when(locationRepository.findAll()).thenReturn(List.of(loc));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any())).thenReturn(List.of(1800.0));
+    @DisplayName("rows carry the userId they were measured for")
+    void measureForUser_rowsHaveTheRequestingUsersId() {
+        orsAnswers(List.of(location(1L, "Durham", 54.78, -1.58)), List.of(1800.0));
 
         Long differentUserId = 99L;
-        service.refreshForUser(differentUserId, SOURCE_LAT, SOURCE_LON);
+        List<UserDriveTimeEntity> rows =
+                service.measureForUser(differentUserId, SOURCE_LAT, SOURCE_LON).orElseThrow();
 
-        @SuppressWarnings("unchecked")
-        ArgumentCaptor<List<UserDriveTimeEntity>> captor = ArgumentCaptor.forClass(List.class);
-        verify(driveTimeWriter).replaceForUser(eq(differentUserId), captor.capture());
-        assertThat(captor.getValue().get(0).getUserId()).isEqualTo(differentUserId);
+        assertThat(rows.get(0).getUserId()).isEqualTo(differentUserId);
     }
 
     @Test
-    @DisplayName("ORS duration is rounded to nearest second before persisting")
-    void refreshForUser_roundsFractionalSeconds() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity loc = location(1L, "Durham", 54.78, -1.58);
-        when(locationRepository.findAll()).thenReturn(List.of(loc));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any())).thenReturn(List.of(2700.7));
+    @DisplayName("a fractional ORS duration is rounded to the nearest second")
+    void measureForUser_roundsFractionalSeconds() {
+        orsAnswers(List.of(location(1L, "Durham", 54.78, -1.58)), List.of(2700.7));
 
-        service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
+        List<UserDriveTimeEntity> rows =
+                service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON).orElseThrow();
 
-        @SuppressWarnings("unchecked")
-        ArgumentCaptor<List<UserDriveTimeEntity>> captor = ArgumentCaptor.forClass(List.class);
-        verify(driveTimeWriter).replaceForUser(eq(USER_ID), captor.capture());
-        assertThat(captor.getValue().get(0).getDriveDurationSeconds()).isEqualTo(2701);
-    }
-
-    @Test
-    @DisplayName("old drive times are retained when ORS returns empty — the method returns early")
-    void refreshForUser_emptyOrsResult_writerNotCalled() {
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity loc = location(1L, "Durham", 54.78, -1.58);
-        when(locationRepository.findAll()).thenReturn(List.of(loc));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any())).thenReturn(List.of());
-
-        service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
-
-        // Old data should NOT be wiped when ORS returns empty — the method returns early
-        verifyNoInteractions(driveTimeWriter);
+        assertThat(rows.get(0).getDriveDurationSeconds()).isEqualTo(2701);
     }
 
     // The interrupt case moved with the semaphore. It used to live here, because the permit was
@@ -275,61 +227,57 @@ class DriveDurationServiceTest {
     // client does not acquire a semaphore.
 
     @Test
-    @DisplayName("ORS client exception propagates — drive times not persisted")
-    void refreshForUser_orsClientThrows_propagates() {
+    @DisplayName("an ORS client exception propagates")
+    void measureForUser_orsClientThrows_propagates() {
         when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity loc = location(1L, "Durham", 54.78, -1.58);
-        when(locationRepository.findAll()).thenReturn(List.of(loc));
-        when(orsClient.fetchDurations(anyDouble(), anyDouble(), any()))
+        List<LocationEntity> roster = List.of(location(1L, "Durham", 54.78, -1.58));
+        when(locationRepository.findAll()).thenReturn(roster);
+        when(orsClient.fetchDurations(eq(SOURCE_LAT), eq(SOURCE_LON), destinationsOf(roster)))
                 .thenThrow(new RuntimeException("ORS 503 Service Unavailable"));
 
-        org.assertj.core.api.Assertions.assertThatThrownBy(
-                () -> service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON))
+        assertThatThrownBy(() -> service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("503");
-
-        verifyNoInteractions(driveTimeWriter);
     }
 
     @Test
-    @DisplayName("zero seconds ORS duration is valid and persisted (>= 0 boundary)")
-    void refreshForUser_zeroDuration_persisted() {
+    @DisplayName("a zero-second duration is valid and measured (>= 0 boundary)")
+    void measureForUser_zeroDuration_measured() {
         // 0.0 is a valid duration (>= 0). Mutating >= to > would skip it.
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity loc = location(1L, "Local", 54.78, -1.58);
-        when(locationRepository.findAll()).thenReturn(List.of(loc));
-        when(orsClient.fetchDurations(eq(SOURCE_LAT), eq(SOURCE_LON), any()))
-                .thenReturn(List.of(0.0));
+        orsAnswers(List.of(location(1L, "Local", 54.78, -1.58)), List.of(0.0));
 
-        int result = service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
+        List<UserDriveTimeEntity> rows =
+                service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON).orElseThrow();
 
-        assertThat(result).isEqualTo(1);
-        @SuppressWarnings("unchecked")
-        ArgumentCaptor<List<UserDriveTimeEntity>> captor = ArgumentCaptor.forClass(List.class);
-        verify(driveTimeWriter).replaceForUser(eq(USER_ID), captor.capture());
-        assertThat(captor.getValue().get(0).getDriveDurationSeconds()).isZero();
+        assertThat(rows).hasSize(1);
+        assertThat(rows.get(0).getDriveDurationSeconds()).isZero();
     }
 
     @Test
-    @DisplayName("if ORS returns more durations than locations, only location-indexed entries persisted")
-    void refreshForUser_moreDurationsThanLocations_onlyMatchingPersisted() {
-        // Math.min(locations, durations) loop bound — mutating to locations.size() causes IOOBE
-        when(orsProperties.isConfigured()).thenReturn(true);
-        LocationEntity loc1 = location(1L, "Durham", 54.78, -1.58);
-        LocationEntity loc2 = location(2L, "Bamburgh", 55.61, -1.71);
-        when(locationRepository.findAll()).thenReturn(List.of(loc1, loc2));
-        when(orsClient.fetchDurations(eq(SOURCE_LAT), eq(SOURCE_LON), any()))
-                .thenReturn(List.of(1800.0, 3600.0, 5400.0, 7200.0));
+    @DisplayName("more durations than locations — only location-indexed entries are measured")
+    void measureForUser_moreDurationsThanLocations_onlyMatchingMeasured() {
+        // Math.min(locations, durations) loop bound — mutating to durations.size() causes IOOBE.
+        orsAnswers(List.of(location(1L, "Durham", 54.78, -1.58),
+                location(2L, "Bamburgh", 55.61, -1.71)), List.of(1800.0, 3600.0, 5400.0, 7200.0));
 
-        int result = service.refreshForUser(USER_ID, SOURCE_LAT, SOURCE_LON);
+        List<UserDriveTimeEntity> rows =
+                service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON).orElseThrow();
 
-        assertThat(result).isEqualTo(2);
-        @SuppressWarnings("unchecked")
-        ArgumentCaptor<List<UserDriveTimeEntity>> captor = ArgumentCaptor.forClass(List.class);
-        verify(driveTimeWriter).replaceForUser(eq(USER_ID), captor.capture());
-        assertThat(captor.getValue()).hasSize(2);
-        assertThat(captor.getValue().get(0).getLocationId()).isEqualTo(1L);
-        assertThat(captor.getValue().get(1).getLocationId()).isEqualTo(2L);
+        assertThat(rows).extracting(UserDriveTimeEntity::getLocationId).containsExactly(1L, 2L);
+    }
+
+    @Test
+    @DisplayName("fewer durations than locations — only the answered locations are measured")
+    void measureForUser_fewerDurationsThanLocations_onlyAnsweredMeasured() {
+        // The other side of the same bound: mutating it to locations.size() reads past the end of
+        // a short ORS list.
+        orsAnswers(List.of(location(1L, "Durham", 54.78, -1.58),
+                location(2L, "Bamburgh", 55.61, -1.71)), List.of(1800.0));
+
+        List<UserDriveTimeEntity> rows =
+                service.measureForUser(USER_ID, SOURCE_LAT, SOURCE_LON).orElseThrow();
+
+        assertThat(rows).extracting(UserDriveTimeEntity::getLocationId).containsExactly(1L);
     }
 
     private static LocationEntity location(Long id, String name, double lat, double lon) {
